bet interface and soe otger landng oage maded

--- a/ArsaRExCH/Components/Pages/BetComponent.razor
+++ b/ArsaRExCH/Components/Pages/BetComponent.razor
@@ -6,7 +6,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @attribute [Authorize]
-@rendermode InteractiveAuto
+@rendermode InteractiveServer
 @inject ArsaRExCH.Interface.BetInterface _interface
 @inject ArsaRExCH.Interface.WalletInterface<double> _interface2
 @using ArsaRExCH.Model
