--- a/ArsaRExCH/Components/Pages/AddMoneyBank.razor
+++ b/ArsaRExCH/Components/Pages/AddMoneyBank.razor
@@ -6,7 +6,7 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @attribute [Authorize]
-@rendermode InteractiveAuto
+@rendermode InteractiveServer
 
 <h3>Here connect to BANK or 3rd party app API</h3>
 <h4>Deposit</h4>
