details bet added sample

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -69,9 +69,9 @@
 
             <!-- Tab 4 with hover effect to show more tabs -->
             <div class="tab-container">
-                <a href="#" class="main-tab">User Information</a>
+                <a  class="main-tab">User Information</a>
                 <div class="sub-tabs">
-                    <a href="#tab5">Tab 5</a>
+                    <a href="BetHistory">Bet History</a>
                     <a href="#tab6">Tab 6</a>
                     <a href="#tab7">Tab 7</a>
                     <a href="#tab8">Tab 8</a>
