--- a/ArsaRExCH/Components/MyComponents/CalculateBetResault.razor
+++ b/ArsaRExCH/Components/MyComponents/CalculateBetResault.razor
@@ -1,7 +1,35 @@
-﻿<h3>CalculateBetResault</h3>
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject NavigationManager NavigationManager
+@using System.Security.Claims
+@inject AuthenticationStateProvider _AuthenticationStateProvider
+@inject HttpClient Http
+@attribute [Authorize]
+@rendermode InteractiveServer
+@inject ArsaRExCH.Interface.BetInterface _interface
+@inject ArsaRExCH.Interface.WalletInterface<double> _interface2
+@using ArsaRExCH.Model
+@using ArsaRExCH.Components.Pages
+@using ArsaRExCH.Components.MyComponents
+@using ArsaRExCH.StaticHelper _helper
+
 
 @code {
-    /*
+     /*
      * This component will check every Bet 
-     */
+    */
+    private string user2 { get; set; }
+    private Bet bet = new bet();
+    protected override async Task OnInitializedAsync()
+    {
+        // Check if the user is logged in and fetch their information
+        var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        if (user.Identity?.IsAuthenticated ?? false)
+        {
+            user2 = user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value;
+            
+        }
+
+    }
 }
