--- a/ArsaRExCH/Components/MyComponents/BetTest2.razor
+++ b/ArsaRExCH/Components/MyComponents/BetTest2.razor
@@ -14,7 +14,7 @@
 @using ArsaRExCH.Components.MyComponents
 @inject NavigationManager manager
 @inject EventService EventService
-
+@inject ArsaRExCH.Interface.PriceInterface _priceInterface
 
 
 
@@ -151,9 +151,10 @@
         BetModel.IsBetActive = true;
         BetModel.ISDeleted = false;
         BetModel.UserIdSec = user2; // Example user ID
-        BetModel.BtcPriceNow = 11200000; // Retrieve current BTC price from the database or API call
+        BetModel.BtcPriceNow = await _priceInterface.GetBtcPriceFromBinance(); // Retrieve current BTC price from the database or API call
         BetModel.EthPriceNow = 11200000; // Retrieve current ETH price from the database or API call
-        BetModel.OpendBetAtricle = DateTime.Now; // Set the current time as the opening time of the bet
+        /*this is shoow ase i just now work on btc*/
+        BetModel.OpendBetAtricle = DateTime.UtcNow; // Set the current time as the opening time of the bet
         BetModel.WiningAmount = null; // To be calculated later
 
         BtcBetAmout = BetModel.BetAmountBtc; // Set the bet amount in BTC
