SOme changes in background service task , to me for nwo is ok , hardcoded user id but i should check about user id generate which nit work. No internet conection at time

--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -80,7 +80,7 @@
 
             <!-- Wrapper div to style the component positioning -->
             <div class="component-wrapper">
-                <ArsaRExCH.Components.Pages.BtcPrice></ArsaRExCH.Components.Pages.BtcPrice>
+              <!---  <ArsaRExCH.Components.Pages.BtcPrice></ArsaRExCH.Components.Pages.BtcPrice>-->
             </div>
           
         </div>
