--- a/ArsaRExCH/Components/MyComponents/BetTest2.razor
+++ b/ArsaRExCH/Components/MyComponents/BetTest2.razor
@@ -13,7 +13,6 @@
 @using ArsaRExCH.Components.Pages
 @using ArsaRExCH.Components.MyComponents
 @inject NavigationManager manager
-@inject EventService EventService
 @inject ArsaRExCH.Interface.PriceInterface _priceInterface
 
 
@@ -151,7 +150,7 @@
         BetModel.IsBetActive = true;
         BetModel.ISDeleted = false;
         BetModel.UserIdSec = user2; // Example user ID
-        BetModel.BtcPriceNow = await _priceInterface.GetBtcPriceFromBinance(); // Retrieve current BTC price from the database or API call
+      //  BetModel.BtcPriceNow = await _priceInterface.GetBtcPriceFromBinance(); // Retrieve current BTC price from the database or API call
         BetModel.EthPriceNow = 11200000; // Retrieve current ETH price from the database or API call
         /*this is shoow ase i just now work on btc*/
         BetModel.OpendBetAtricle = DateTime.UtcNow; // Set the current time as the opening time of the bet
