most winner component

--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -7,11 +7,19 @@
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject HttpClient Http
 @inject ArsaRExCH.Interface.WalletInterface<double> _face
+@using ArsaRExCH.Components.MyComponents
+
+<style>
+    .win-container {
+        border: 2px solid #000; /* Black border with 2px thickness */
+        padding: 2px; /* Optional: Add padding inside the border */
+        border-radius: 5px; /* Optional: Add rounded corners */
+        display: inline-block; /* Ensure the div sizes itself to the content */
+
+    }
+</style>
 
 
-<h3>Welcome To ArsaRExchange & Casino </h3>
-<p>Here is Bet System om Bitcoin Volatility , The System is designed to guess Bitcoin Price
-</p><br />
-<p>You will geuss Bitcoin price ANd bet on That , You will say on which date and time that bitcoin 
-    price will happens
-</p>
+<div class="win-container">
+  <Win></Win>
+</div>
