--- a/ArsaRExCH/Components/MyComponents/Win.razor
+++ b/ArsaRExCH/Components/MyComponents/Win.razor
@@ -13,7 +13,7 @@
 <style>
     .bet-grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 10px; /* Adjust the gap between items as needed */
     }
 
@@ -35,14 +35,16 @@ else if (userTotalWinningAmounts.Count == 0)
 }
 else
 {
-    <div class="bet-container">
+    <center> <p>Most winners</p></center>
+    <div class="bet-container" style="width:auto">
         @foreach (var userBet in userTotalWinningAmounts)
         {
-            <div class="bet-grid">
+          <div class="bet-grid">
                 <div class="bet-item"><strong>User</strong> @userBet.UserId</div>
                 <div class="bet-item"><strong>Total Win</strong> @userBet.TotalWinningAmount</div>
 
-            </div>
+                </div>
+          
         }
     </div>
 }
