Admi Page Some cinfiguration

--- a/ArsaRExCH/Components/MyComponents/Win.razor
+++ b/ArsaRExCH/Components/MyComponents/Win.razor
@@ -35,7 +35,7 @@ else if (userTotalWinningAmounts.Count == 0)
 }
 else
 {
-    <center> <p>Most winners</p></center>
+    <center> <p>Most 10 Winners</p></center>
     <div class="bet-container" style="width:auto">
         @foreach (var userBet in userTotalWinningAmounts)
         {
