--- a/ArsaRExCH/Components/Account/Pages/ForgotPassword.razor
+++ b/ArsaRExCH/Components/Account/Pages/ForgotPassword.razor
@@ -3,14 +3,16 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
+@using ArsaRExCH.DTOs
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using ArsaRExCH.Data
 
 @inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
+
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
+@inject ArsaRExCH.Interface.WalletInterface<double> _face
 
 <PageTitle>Forgot your password?</PageTitle>
 
@@ -54,8 +56,21 @@
             NavigationManager.ToAbsoluteUri("Account/ResetPassword").AbsoluteUri,
             new Dictionary<string, object?> { ["code"] = code });
 
-        await EmailSender.SendPasswordResetLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
-
+       // await EmailSender.SendPasswordResetLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
+        EmailRequest request = new EmailRequest();
+        {
+            request.Email = Input.Email;
+            request.HtmlMessage = HtmlEncoder.Default.Encode(callbackUrl);
+            request.Subject = "Please change Password";
+        };
+        try
+        {
+            await _face.SendEmailAsync(request);
+        }
+        catch (Exception w)
+        {
+            Console.WriteLine(w.ToString);
+        }
         RedirectManager.RedirectTo("Account/ForgotPasswordConfirmation");
     }
 
