--- a/ArsaRExCH/Components/Account/Pages/Register.razor
+++ b/ArsaRExCH/Components/Account/Pages/Register.razor
@@ -4,6 +4,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity.UI.Services
 @using Microsoft.AspNetCore.WebUtilities
 @using ArsaRExCH.Data
 @using ArsaRExCH.DTOs
@@ -12,7 +13,7 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
 @inject SignInManager<ApplicationUser> SignInManager
-@inject IEmailSender<ApplicationUser> EmailSender
+@inject IEmailSender EmailSender
 @inject ILogger<Register> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
@@ -83,9 +84,7 @@
         Logger.LogInformation("User created a new account with password.");
 
         var userId = await UserManager.GetUserIdAsync(user);
-        //await _face.CreateETHWallet(userId,"ETH");
-        // await _face.CreateBNBWallet(userId,"BNB");
-        //  await _face.CreateBTCWallet(userId,"BTC");
+
 
         /*Here i need check pair endpoint to see available pairs in website and make for each a new
          * wallet.The endpoint return Array od name and network name whciih we need
@@ -100,7 +99,7 @@
             NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
             new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
         string decodedUrl = WebUtility.HtmlDecode(callbackUrl);
-        await EmailSender.SendConfirmationLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
+        // await EmailSender.SendConfirmationLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
 
         EmailRequest request = new EmailRequest();
         {
@@ -108,8 +107,12 @@
             request.HtmlMessage = decodedUrl;
             request.Subject = "Please Verify Your Email By Clicking On Link";
         };
-
-        await _face.SendEmailAsync(request);
+        try{
+            await _face.SendEmailAsync(request);
+        }catch(Exception w)
+        {
+            Console.WriteLine(w.ToString);
+        }
         if (UserManager.Options.SignIn.RequireConfirmedAccount)
         {
             RedirectManager.RedirectTo(
