--- a/ArsaRExCH/Components/Account/Pages/RegisterConfirmation.razor
+++ b/ArsaRExCH/Components/Account/Pages/RegisterConfirmation.razor
@@ -2,11 +2,12 @@
 
 @using System.Text
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity.UI.Services
 @using Microsoft.AspNetCore.WebUtilities
 @using ArsaRExCH.Data
 
 @inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
+@inject IEmailSender EmailSender
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
