--- a/ArsaRExCH/Components/MyComponents/UserAnalyticsBet.razor
+++ b/ArsaRExCH/Components/MyComponents/UserAnalyticsBet.razor
@@ -22,8 +22,8 @@
                 <li>
                     <strong>Bet ID:</strong> @bet.BetId |
                     <strong>Bet Amount BTC:</strong> @bet.BetAmountBtc |
-                    <strong>BTC Price Now:</strong> @bet.BtcPriceNow |
-                    <strong>BTC Expire Price:</strong> @bet.BtcPriceExpireBet |
+                    <strong>BTC Price At Bet Time:</strong> @bet.BtcPriceNow |
+                    <strong>BTC Expire Price Guess:</strong> @bet.BtcPriceExpireBet |
                     <strong>BTC Hit Date:</strong> @bet.HitDateBTC |
                     <strong>Winning Amount:</strong> @bet.WiningAmount
                 </li>
