--- a/ArsaRExCH/Components/MyComponents/Win.razor
+++ b/ArsaRExCH/Components/MyComponents/Win.razor
@@ -43,7 +43,8 @@ else
                 <div class="bet-item"><strong>User</strong> @userBet.UserId</div>
                 <div class="bet-item"><strong>Total Win</strong> @userBet.TotalWinningAmount </div>
                 <div class="bet-item">
-                    <a href="/BetPreview/@userBet.UserId">View History</a></div>
+                    <a href="/UserAnalytic/@userBet.UserId">View History</a>
+                </div>
                 
             </div>
            
